--- a/scheduler/src/main/resources/templates/cert/FindId.html
+++ b/scheduler/src/main/resources/templates/cert/FindId.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>Bootstrap demo</title>
-    <link href="/static/css/bootstrap.min.css"
-          rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <title>Scheduler</title>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <style>
         .container {
             max-width: 80em;
