--- a/scheduler/src/main/resources/templates/completion.html
+++ b/scheduler/src/main/resources/templates/completion.html
@@ -2,7 +2,8 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <title>Scheduler</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <style>
         .container {
@@ -36,8 +37,8 @@
         <!--monday div start-->
         <div class="board rounded-3 border border-2">
             <h1> 수업 신청이 완료되었습니다. </h1>
-            <p>변경사항이 있을시 입력한 이름으로 수정해주세요<br>
-                문의사항이 있을시 담당 선생님께 문의해주세요</p>
+            <p>변경사항이 있을시 입력한 이름으로 수정해주세요.<br>
+                문의사항이 있을시 담당 선생님께 문의해주세요.</p>
 
         </div>
     </div>
