--- a/scheduler/src/main/resources/templates/index.html
+++ b/scheduler/src/main/resources/templates/index.html
@@ -6,14 +6,15 @@
     <title>Scheduler</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <style>
-        .container {
-            max-width: 80em;
-        }
 
         body { background-color: lightgoldenrodyellow; }
 
         h1, h2, h5{
             text-align: center;
+        }
+
+        .text-end{
+            padding: 1em;
         }
 
         .board, .monday, .tuesday, .wednesday, .thursday, .friday {
@@ -183,7 +184,6 @@
                                th:errorclass="field-error">
                     </label>
                 </div>
-
                 <label class="form-check-label">
                      <input class="form-check-input"
                             type="radio"
@@ -194,11 +194,12 @@
                 <div class="field-error" th:errors="*{friday}"></div>
             </div>
             <!--friday div ends-->
+            <!--요일 끝-->
         </div>
-        <!--요일 끝-->
         <div class="text-end">
-            <button type="submit" class="btn btn-primary">확인</button>
+            <button class="btn btn-primary" type="submit">제출하기</button><br><br><br>
         </div>
+
     </form>
 </div><!-- container-->
 </body>
