--- a/scheduler/src/main/resources/templates/join.html
+++ b/scheduler/src/main/resources/templates/join.html
@@ -38,41 +38,48 @@
 </head>
 <body>
 <div class="container">
-    <form method='post' role="form" th:action="@{/}" th:object="${login}">
+    <form method='post' role="form" th:action="@{/}" th:object="${join}">
         <div class="py-2">
             <div class="header">
                 <br><br>
 
             </div>
         </div>
-        <!--학생 이름-->
         <div class="py-2">
             <div class="board rounded-3 border border-2">
 
-                <h1> 교사 로그인 </h1>
-
+                <h1> 회원가입 </h1>
+                <!--아이디-->
                 <label for="teacherId"></label>
                 <input class="form-control" id="teacherId" placeholder="아이디를 입력해주세요"
                        th:errorclass="field-error" th:field="*{teacherId}"
                        type="text">
                 <div class="field-error" th:errors="*{teacherId}"></div>
 
+                <!--비밀번호-->
                 <label for="teacherPassword"></label>
                 <input class="form-control" id="teacherPassword" placeholder="비밀번호를 입력해 주세요"
                        th:errorclass="field-error" th:field="*{teacherPassword}"
                        type="password">
-                <div class="field-error" th:errors="*{teacherPassword}"></div><br>
+                <div class="field-error" th:errors="*{teacherPassword}"></div>
+
+                <!--이름-->
+                <label for="teacherName"></label>
+                <input class="form-control" id="teacherName" placeholder="이름 입력해 주세요"
+                       th:errorclass="field-error" th:field="*{teacherName}"
+                       type="text">
+                <div class="field-error" th:errors="*{teacherName}"></div>
+
+                <!--이메일-->
+                <label for="teacherEmail"></label>
+                <input class="form-control" id="teacherEmail" placeholder="이메일을 입력하세요"
+                       th:errorclass="field-error" th:field="*{teacherEmail}"
+                       type="email">
+                <div class="field-error" th:errors="*{teacherEmail}"></div><br>
 
                 <div class="text-end">
-                    <button class="btn btn-primary" type="submit">로그인</button>
+                    <button class="btn btn-primary" type="submit">가입하기</button>
                 </div><br>
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="#">아이디 찾기</a></li>
-                            <li class="breadcrumb-item"><a href="#">비밀번호 찾기</a></li>
-                            <li class="breadcrumb-item"><a href="/join/teacher">회원가입</a></li>
-                        </ol>
-                    </nav>
             </div>
         </div>
     </form>
