join(testCase), DTO, Mapper

--- a/scheduler/src/main/resources/templates/search.html
+++ b/scheduler/src/main/resources/templates/search.html
@@ -48,7 +48,7 @@
                 <input type="text" id="studentName" th:field="*{studentName}"
                        th:errorclass="field-error" class="form-control" placeholder="이름을 정확히 입력해주세요">
                 <div class="field-error" th:errors="*{studentName}"></div>
-                <div class="field-error" th:errors="*{nullStudentName}"></div><br>
+                <div class="field-error" th:text="${nullStudentName}"></div><br>
                 <div class="text-end">
                     <button class="btn btn-primary" type="submit">수업 조회</button></div>
                 <br><br>
