--- a/scheduler/src/main/resources/templates/join.html
+++ b/scheduler/src/main/resources/templates/join.html
@@ -25,10 +25,6 @@
         .board p {
             text-align: center;
         }
-        .breadcrumb {
-            display: flex;
-            justify-content: center;
-        }
         .field-error {
             border-color: #dc3545;
             color: #dc3545;
@@ -38,7 +34,7 @@
 </head>
 <body>
 <div class="container">
-    <form method='post' role="form" th:action="@{/}" th:object="${join}">
+    <form method='post' role="form" th:action="@{/join/approved}" th:object="${join}">
         <div class="py-2">
             <div class="header">
                 <br><br>
@@ -55,6 +51,7 @@
                        th:errorclass="field-error" th:field="*{teacherId}"
                        type="text">
                 <div class="field-error" th:errors="*{teacherId}"></div>
+                <div class="field-error" th:text="${errorMessage}"></div>
 
                 <!--비밀번호-->
                 <label for="teacherPassword"></label>
