--- a/scheduler/src/main/resources/templates/login.html
+++ b/scheduler/src/main/resources/templates/login.html
@@ -38,7 +38,7 @@
 </head>
 <body>
 <div class="container">
-    <form method='post' role="form" th:action="@{/}" th:object="${login}">
+    <form method='post' role="form" th:action="@{/admin/teacherLogin}" th:object="${login}">
         <div class="py-2">
             <div class="header">
                 <br><br>
@@ -61,7 +61,8 @@
                 <input class="form-control" id="teacherPassword" placeholder="비밀번호를 입력해 주세요"
                        th:errorclass="field-error" th:field="*{teacherPassword}"
                        type="password">
-                <div class="field-error" th:errors="*{teacherPassword}"></div><br>
+                <div class="field-error" th:errors="*{teacherPassword}"></div>
+                <div class="field-error" th:text="${approved}"></div><br>
 
                 <div class="text-end">
                     <button class="btn btn-primary" type="submit">로그인</button>
