--- a/scheduler/src/main/resources/templates/admin/manage.html
+++ b/scheduler/src/main/resources/templates/admin/manage.html
@@ -70,7 +70,7 @@
 
             if (confirmation) {
                 $.ajax({
-                    url: '/admin/delete',
+                    url: '/manage/delete',
                     method: 'POST',
                     data: { deleteClassList: studentName },
                     success: function(response) {
