--- a/scheduler/src/main/resources/templates/index.html
+++ b/scheduler/src/main/resources/templates/index.html
@@ -46,7 +46,7 @@
 </head>
 <body>
 <div class="container">
-    <form role="form" th:action="@{/submit}" th:object="${class}" method='post'>
+    <form method='post' role="form" th:action="@{/search/submit}" th:object="${class}">
         <div class="py-2">
             <div class="header">
 
