--- a/scheduler/src/main/resources/templates/login.html
+++ b/scheduler/src/main/resources/templates/login.html
@@ -38,7 +38,7 @@
 </head>
 <body>
 <div class="container">
-    <form method='post' role="form" th:action="@{/teacherLogin}" th:object="${login}">
+    <form method='post' role="form" th:action="@{/login/Login}" th:object="${login}">
         <div class="py-2">
             <div class="header">
                 <br><br>
