--- a/scheduler/src/main/resources/templates/studentClass/manage.html
+++ b/scheduler/src/main/resources/templates/studentClass/manage.html
@@ -35,9 +35,9 @@
                 <tr>
                     <td>
                         <div class="form-check" id="multiChk">
-                            <label><input class="form-check-input" type="checkbox"
-                                          th:field="*{deleteClassList}"
-                                          th:value="${class.getStudentName()}"></label>
+<!--                            <label><input class="form-check-input" type="checkbox"-->
+<!--                                          th:field="*{deleteClassList}"-->
+<!--                                          th:value="${class.getStudentName()}"></label>-->
                         </div>
                     </td>
                     <td th:text="${class.getStudentName()}"></td>
