--- a/scheduler/src/main/resources/templates/cert/findId.html
+++ b/scheduler/src/main/resources/templates/cert/findId.html
@@ -5,9 +5,14 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Scheduler</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <script th:src="@{/js/bootstrap.min.js}"></script>
     <style>
 
         body { background-color: lightgoldenrodyellow; }
+
+        .container{
+            max-width: 30em;
+        }
 
         h1{
             text-align: center;
@@ -30,7 +35,7 @@
 </head>
 <body>
 <div class="container">
-    <form method='post' role="form" th:action="@{/}" th:object="${login}">
+    <form method='post' role="form" th:action="@{/cert/sendUserId}" th:object="${account}">
         <div class="py-2">
             <div class="header">
                 <br><br>
@@ -43,22 +48,37 @@
 
                 <h1> 아이디 찾기 </h1>
 
-                <label for="adminName"></label>
-                <input class="form-control" id="adminName" placeholder="이름을 입력해주세요"
-                       th:errorclass="field-error" th:field="*{adminName}"
-                       type="text">
-                <div class="field-error" th:errors="*{adminName}"></div>
-
                 <label for="adminEmail"></label>
                 <input class="form-control" id="adminEmail" placeholder="이메일을 입력해주세요"
-                       th:errorclass="field-error" th:field="*{adminEmail}"
-                       type="text">
-                <div class="field-error" th:errors="*{adminEmail}"></div><br>
+                       th:errorclass="field-error" th:field="*{email}"
+                       type="email">
+                <div class="field-error" th:errors="*{email}"></div>
+                <div class="field-error" th:text="${errorMessage}"></div>
+                <br>
 
-                <div class="error-message"></div>
                 <div class="text-end">
-                    <button class="btn btn-primary" type="submit">아이디 찾기</button>
-                </div><br><br>
+                    <button class="btn btn-primary" data-bs-target="#staticBackdrop" data-bs-toggle="modal" type="submit">
+                        아이디 찾기
+                    </button>
+                </div>
+                <div aria-hidden="true" aria-labelledby="staticBackdropLabel" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" data-bs-toggle="modal" id="staticBackdrop" tabindex="-1">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+                                <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button"></button>
+                            </div>
+                            <div class="modal-body">
+                                <div class="field-error" th:text="${sendUserIdMessage}"></div>
+                            </div>
+                            <div class="modal-footer">
+                                <a href="/cert/findId"><button class="btn btn-primary" type="button">확인</button></a>
+                                <button class="btn btn-secondary" data-bs-dismiss="modal" type="button">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br>
             </div>
         </div>
     </form>
