--- a/scheduler/src/main/resources/templates/login.html
+++ b/scheduler/src/main/resources/templates/login.html
@@ -29,6 +29,9 @@
             display: flex;
             justify-content: center;
         }
+        .error-message{
+            color: #dc3545;
+        }
 
     </style>
 </head>
