--- a/scheduler/src/main/resources/templates/index.html
+++ b/scheduler/src/main/resources/templates/index.html
@@ -56,7 +56,7 @@
         <!--학생 이름-->
         <div class="py-2">
             <div class="board rounded-3 border border-2">
-                <a href = "/search">
+                <a href = "/search/">
                     <button type="button" class="btn btn-primary">수업 조회 및 변경</button>
                 </a><br><br>
 
