--- a/scheduler/src/main/resources/templates/join.html
+++ b/scheduler/src/main/resources/templates/join.html
@@ -51,28 +51,29 @@
                        th:errorclass="field-error" th:field="*{teacherId}"
                        type="text">
                 <div class="field-error" th:errors="*{teacherId}"></div>
+                <!--중복 아이디 검사-->
                 <div class="field-error" th:text="${errorMessage}"></div>
 
                 <!--비밀번호-->
-                <label for="teacherPassword"></label>
-                <input class="form-control" id="teacherPassword" placeholder="비밀번호를 입력해 주세요"
-                       th:errorclass="field-error" th:field="*{teacherPassword}"
+                <label for="password"></label>
+                <input class="form-control" id="password" placeholder="비밀번호를 입력해 주세요"
+                       th:errorclass="field-error" th:field="*{password}"
                        type="password">
-                <div class="field-error" th:errors="*{teacherPassword}"></div>
+                <div class="field-error" th:errors="*{password}"></div>
 
                 <!--이름-->
-                <label for="teacherName"></label>
-                <input class="form-control" id="teacherName" placeholder="이름 입력해 주세요"
-                       th:errorclass="field-error" th:field="*{teacherName}"
+                <label for="name"></label>
+                <input class="form-control" id="name" placeholder="이름 입력해 주세요"
+                       th:errorclass="field-error" th:field="*{name}"
                        type="text">
-                <div class="field-error" th:errors="*{teacherName}"></div>
+                <div class="field-error" th:errors="*{name}"></div>
 
                 <!--이메일-->
-                <label for="teacherEmail"></label>
-                <input class="form-control" id="teacherEmail" placeholder="이메일을 입력하세요"
-                       th:errorclass="field-error" th:field="*{teacherEmail}"
+                <label for="email"></label>
+                <input class="form-control" id="email" placeholder="이메일을 입력하세요"
+                       th:errorclass="field-error" th:field="*{email}"
                        type="email">
-                <div class="field-error" th:errors="*{teacherEmail}"></div><br>
+                <div class="field-error" th:errors="*{email}"></div><br>
 
                 <div class="text-end">
                     <button class="btn btn-primary" type="submit">가입하기</button>
