--- a/scheduler/src/main/resources/templates/admin/teacherList.html
+++ b/scheduler/src/main/resources/templates/admin/teacherList.html
@@ -34,25 +34,33 @@
 </head>
 <body>
 <div class="container">
-    <form method='post' role="form" th:action="@{/search/submit}" th:object="${}">
-        <div class="py-2">
-            <div class="header">
-
-
-            </div>
-        </div>
-        <!--학생 이름-->
-        <div class="py-2">
-            <div class="board rounded-3 border border-2">
-
-            </div>
-        </div>
-        <!--요일-->
-        <div class="text-end">
-            <button class="btn btn-primary" type="submit">제출하기</button><br><br><br>
-        </div>
+    <form method='post' role="form" th:action="@{/admin/grant}" th:object="${teacherList}">
 
     </form>
 </div><!-- container-->
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script>
+    $(document).ready(function() {
+        $('.delete-button').click(function() {
+            var studentName = $(this).attr('value');
+            var confirmation = confirm('정말로 ' + studentName + '을(를) 삭제하시겠습니까?');
+
+            if (confirmation) {
+                $.ajax({
+                    url: '/manage/delete',
+                    method: 'POST',
+                    data: { deleteClassList: studentName },
+                    success: function(response) {
+                        alert('삭제되었습니다.');
+                        location.reload();
+                    },
+                    error: function(xhr, status, error) {
+                        alert('삭제에 실패했습니다. 다시 시도해주세요.');
+                    }
+                });
+            }
+        });
+    });
+</script>
 </html>
