--- a/scheduler/src/main/resources/templates/admin/teacherList.html
+++ b/scheduler/src/main/resources/templates/admin/teacherList.html
@@ -1,58 +1,63 @@
 <!DOCTYPE HTML>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
     <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Scheduler</title>
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <link th:href="@{/css/bootstrap.min.css}"
+          href="/static/css/bootstrap.min.css" rel="stylesheet">
     <style>
-
-        body { background-color: lightgoldenrodyellow; }
-
-        h1, h2, h5{
-            text-align: center;
+        input[type="checkbox"] {
+            width: 1.5em;
+            height: 1.5em;
         }
-
-        .text-end{
-            padding: 1em;
-        }
-
-        .board {
-            padding: 1em;
-            margin: 1em;
-            background-color: white;
-        }
-        .board p, .monday p, .tuesday p, .wednesday p, .thursday p, .friday p {
-            text-align: center;
-        }
-
-        .form-check-label input {
-            margin-right: 10px;
-        }
-
     </style>
 </head>
 <body>
 <div class="container">
-    <form method='post' role="form" th:action="@{/admin/grant}" th:object="${teacherList}">
-
-    </form>
-</div><!-- container-->
+    <div th:object="${teacherList}">
+        <table class="table caption-top table-responsive" id="jb-table">
+            <caption>List of users</caption>
+            <thead id="header">
+            <tr>
+                <th scope="col"></th>
+                <th scope="col">교사 이름</th>
+                <th scope="col">이름</th>
+                <th scope="col">승인</th>
+            </tr>
+            </thead>
+            <tbody th:each="teacher : ${teacherList}">
+            <tr>
+                <td th:text="${teacher.teacherId}"></td>
+                <td th:text="${teacher.getName()}"></td>
+                <td>
+                    <button class="btn btn-primary delete-button"
+                            th:value="${teacher.getTeacherId()}">승인</button>
+                </td>
+            </tr>
+            </tbody>
+            <tfoot>
+            <tr>
+            </tr>
+            </tfoot>
+        </table>
+    </div>
+</div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
     $(document).ready(function() {
         $('.delete-button').click(function() {
-            var studentName = $(this).attr('value');
-            var confirmation = confirm('정말로 ' + studentName + '을(를) 삭제하시겠습니까?');
+            var teacherId = $(this).attr('value');
+            var confirmation = confirm(studentName + '을(를) 승인하시겠습니까?');
 
             if (confirmation) {
                 $.ajax({
-                    url: '/manage/delete',
+                    url: '/admin/grant',
                     method: 'POST',
-                    data: { deleteClassList: studentName },
+                    data: { teacherId: teacherId },
                     success: function(response) {
-                        alert('삭제되었습니다.');
+                        alert('승인되었습니다..');
                         location.reload();
                     },
                     error: function(xhr, status, error) {
