--- a/scheduler/src/main/resources/templates/admin/teacherList.html
+++ b/scheduler/src/main/resources/templates/admin/teacherList.html
@@ -20,7 +20,6 @@
             <caption>List of users</caption>
             <thead id="header">
             <tr>
-                <th scope="col"></th>
                 <th scope="col">교사 이름</th>
                 <th scope="col">이름</th>
                 <th scope="col">승인</th>
@@ -31,7 +30,7 @@
                 <td th:text="${teacher.teacherId}"></td>
                 <td th:text="${teacher.getName()}"></td>
                 <td>
-                    <button class="btn btn-primary delete-button"
+                    <button class="btn btn-primary approve-button"
                             th:value="${teacher.getTeacherId()}">승인</button>
                 </td>
             </tr>
@@ -47,9 +46,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
     $(document).ready(function() {
-        $('.delete-button').click(function() {
+        $('.approve-button').click(function() {
             var teacherId = $(this).attr('value');
-            var confirmation = confirm(studentName + '을(를) 승인하시겠습니까?');
+            var confirmation = confirm(teacherId + '을(를) 승인하시겠습니까?');
 
             if (confirmation) {
                 $.ajax({
@@ -57,11 +56,11 @@
                     method: 'POST',
                     data: { teacherId: teacherId },
                     success: function(response) {
-                        alert('승인되었습니다..');
+                        alert('승인되었습니다');
                         location.reload();
                     },
                     error: function(xhr, status, error) {
-                        alert('삭제에 실패했습니다. 다시 시도해주세요.');
+                        alert('승인 취소에 실패했습니다. 다시 시도해주세요.');
                     }
                 });
             }
