code refactoring, security

--- a/scheduler/src/main/resources/templates/index.html
+++ b/scheduler/src/main/resources/templates/index.html
@@ -78,7 +78,7 @@
                 <h5>월요일</h5>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
                     <label class="form-check-label"
-                           th:if="${!classInMondayList.contains(num)}">
+                           th:if="${!classList.getMondayClassList().contains(num)}">
                         <input class="form-check-input"
                                type="radio"
                                th:text="오후+'&nbsp;'+${numStat.count}+'시'"
@@ -105,7 +105,7 @@
                 <h5>화요일</h5>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
                     <label class="form-check-label"
-                           th:if="${!classInTuesdayList.contains(num)}">
+                           th:if="${!classList.getTuesdayClassList().contains(num)}">
                         <input class="form-check-input"
                                type="radio"
                                th:text="오후+'&nbsp;'+${numStat.count}+'시'"
@@ -129,7 +129,7 @@
                 <h5>수요일</h5>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
                     <label class="form-check-label"
-                           th:if="${!classInWednesdayList.contains(num)}">
+                           th:if="${!classList.getWednesdayClassList().contains(num)}">
                         <input class="form-check-input"
                                type="radio"
                                th:text="오후+'&nbsp'+${numStat.count}+시"
@@ -153,7 +153,7 @@
                 <h5>목요일</h5>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
                     <label class="form-check-label"
-                           th:if="${!classInThursdayList.contains(num)}">
+                           th:if="${!classList.getThursdayClassList().contains(num)}">
                         <input class="form-check-input" type="radio"
                                th:text="오후+'&nbsp'+${numStat.count}+시"
                                th:value="${numStat.count}"
@@ -176,7 +176,7 @@
                 <h5>금요일</h5>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
                     <label class="form-check-label"
-                           th:if="${!classInFridayList.contains(num)}">
+                           th:if="${!classList.getFridayClassList().contains(num)}">
                         <input class="form-check-input" type="radio"
                                th:text="오후+'&nbsp'+${numStat.count}+시"
                                th:value="${numStat.count}"
