--- a/scheduler/src/main/resources/templates/adminLogin.html
+++ b/scheduler/src/main/resources/templates/adminLogin.html
@@ -44,9 +44,9 @@
         <div class="py-2">
             <div class="board rounded-3 border border-2">
                 <h1> 관리자 로그인 </h1>
-                <label for="adminId"></label>
-                <input class="form-control" id="adminId" placeholder="아이디를 입력해주세요"
-                       th:errorclass="field-error" th:field="*{adminId}"
+                <label for="username"></label>
+                <input class="form-control" id="username" placeholder="아이디를 입력해주세요"
+                       th:errorclass="field-error" th:field="*{username}"
                        type="text">
 
                 <label for="password"></label>
