--- a/scheduler/src/main/resources/templates/login.html
+++ b/scheduler/src/main/resources/templates/login.html
@@ -48,9 +48,9 @@
         <div class="py-2">
             <div class="board rounded-3 border border-2">
                 <h1> 교사 로그인 </h1>
-                <label for="teacherId"></label>
-                <input class="form-control" id="teacherId" placeholder="아이디를 입력해주세요"
-                       th:errorclass="field-error" th:field="*{teacherId}"
+                <label for="username"></label>
+                <input class="form-control" id="username" placeholder="아이디를 입력해주세요"
+                       th:errorclass="field-error" th:field="*{username}"
                        type="text">
 
                 <label for="teacherPassword"></label>
