--- a/scheduler/src/main/resources/templates/manage/class.html
+++ b/scheduler/src/main/resources/templates/manage/class.html
@@ -72,12 +72,12 @@
                 $.ajax({
                     url: '/manage/delete',
                     method: 'POST',
-                    data: { deleteClass: studentName },
-                    success: function(response) {
+                    data: { deleteClassList: studentName },
+                    success: function() {
                         alert('삭제되었습니다.');
                         location.reload();
                     },
-                    error: function(xhr, status, error) {
+                    error: function() {
                         alert('삭제에 실패했습니다. 다시 시도해주세요.');
                     }
                 });
