--- a/scheduler/src/main/resources/templates/adminLogin.html
+++ b/scheduler/src/main/resources/templates/adminLogin.html
@@ -33,7 +33,7 @@
 </head>
 <body>
 <div class="container">
-    <form action="/login/adminLogin/Login" method='post' role="form" th:object="${login}">
+    <form method='post' th:action="@{/adminLogin/Login}" th:object="${login}">
         <div class="py-2">
             <div class="header">
                 <br><br>
