--- a/scheduler/src/main/resources/templates/login.html
+++ b/scheduler/src/main/resources/templates/login.html
@@ -37,7 +37,7 @@
 </head>
 <body>
 <div class="container">
-    <form method='post' th:action="@{/login}" th:object="${login}">
+    <form method='post' th:action="@{/login/Login}" th:object="${login}">
         <div class="py-2">
             <div class="header">
                 <br><br>
